# quiz

./: README.MD  alembic.ini  pyproject.toml  quiz.db  run.py  test.py
conf/: settings.py
database/: __init__.py  core.py
database/migrations/: env.py
database/migrations/versions/: 266b1223bfc7_added_account_table.py
docs/: alembic.md
helper/: exceptions.py  messages.py
kernel/: application.py
quiz/models/: __init__.py  question.py  user.py
quiz/presenter/admin_panel/: __init__.py  admin_pannel.py
quiz/presenter/auth/: authentication.py
quiz/presenter/check/: __init__.py  check.py
quiz/presenter/question_management/: __init__.py  question_management.py
quiz/presenter/take_quiz/: quiz.py
quiz/view/: __init__.py  clear_screen.py  inputs.py  prints.py
