[tool.poetry]
name = "quiz"
version = "0.1.0"
description = ""
authors = ["Masoud lakestani"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.10"
alembic = "^1.10.3"
termcolor2 = "^0.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
